[package]
name = "lunatic"
version = "0.8.0"
edition = "2018"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
description = "Helper library for building Rust applications that run on lunatic."
license = "Apache-2.0/MIT"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
rmp-serde = "^0.15"
bincode = "^1.3"
protobuf = "^2.25"
paste = "1.0"
lunatic-macros = { version = "^0.6.1", path = "./lunatic-macros" }
lunatic-test = { version = "^0.1", path = "./lunatic-test" }

[dev-dependencies]
# WASI branch
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false  }

[[bench]]
name = "spawning"
harness = false

[workspace]
members = [
  "lunatic-macros",
  "lunatic-test",
]
