[package]
name = "lunatic"
version = "0.10.6"
edition = "2021"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
description = "Helper library for building Rust applications that run on lunatic."
license = "Apache-2.0/MIT"
readme = "Readme.md"
repository = "https://github.com/lunatic-solutions/lunatic-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
json_serializer = ["serde_json"]
msgpack_serializer = ["rmp-serde"]
protobuf_serializer = ["protobuf"]

[dependencies]
thiserror = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.3"
serde_json = { version = "^1.0", optional = true }
rmp-serde = { version = "^1.1", optional = true }
protobuf = { version = "^3.1", optional = true }
lunatic-macros = { version = "^0.10", path = "./lunatic-macros" }
lunatic-test = { version = "^0.10", path = "./lunatic-test" }

[dev-dependencies]
# WASI branch
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false }
lunatic = { path = ".", features = ["json_serializer"] }

[[bench]]
name = "serializer"
harness = false

[[bench]]
name = "spawning"
harness = false

[workspace]
members = ["lunatic-macros", "lunatic-test"]

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
