[package]
name = "lunatic"
version = "0.14.0"
edition = "2021"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
description = "Helper library for building Rust applications that run on lunatic."
license = "Apache-2.0/MIT"
readme = "Readme.md"
repository = "https://github.com/lunatic-solutions/lunatic-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
json_serializer = ["serde_json"]
msgpack_serializer = ["rmp-serde"]
protobuf_serializer = ["protobuf"]
sqlite = ["lunatic-sqlite-api"]

[dependencies]
thiserror = "1.0"
rustversion = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.1", optional = true }
protobuf = { version = "3.1", optional = true }
lunatic-sqlite-api = { version = "0.13", optional = true }
lunatic-macros = { version = "0.13", path = "./lunatic-macros" }
lunatic-test = { version = "0.13", path = "./lunatic-test" }
lunatic-sys = { version = "0.14", path = "./lunatic-sys" }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
serde_bytes = "0.11"
lunatic = { path = ".", features = ["json_serializer", "msgpack_serializer"] }

[build-dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["build"] }

[dependencies.pyo3]
version = "0.19.1"
features = ["auto-initialize","abi3-py311"]#,"extension-module"]#, "generate-import-lib"]#,

[[bench]]
name = "serializer"
harness = false

[[bench]]
name = "spawning"
harness = false

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

[workspace]
members = ["lunatic-macros", "lunatic-test", "lunatic-sys"]

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
