[package]
name = "lunatic-macros"
version = "0.13.0"
edition = "2018"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
description = "Helper macros for the `lunatic` crate"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6"
darling = "0.20"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
