[package]
name = "lunatic_message_derive"
version = "0.1.0"
edition = "2018"
authors = ["Bernard Kolobara <me@kolobara.com>"]
description = "Helper macro for the lunatic crate"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"